<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">随手记</string>
    <string name="action_settings">Settings</string>

    <!-- 登录界面 -->
    <string name="user_name">用户名</string>
    <string name="pass_word">密\u3000码</string>
    <string name="user_name_hint">请输入用户名</string>
    <string name="passowrd_hint">请输入密码</string>
    <string name="login">登 录</string>
    <string name="not_have_user">没有账号?</string>
    <string name="login_directly">直接登录</string>

    <!-- 选择界面 -->
    <string name="text_pad">记事簿</string>
    <string name="bill">我的账单</string>
    <string name="account">我的账户</string>

    <!-- 账单添加界面 -->
    <string name="expense">支出</string>
    <string name="income">收入</string>
    <string name="normal">一般</string>
    <string name="cash">现金</string>
    <string name="amount">金额</string>

    <!-- 转账界面 -->
    <string name="transfer_in">转入账户</string>
    <string name="transfer_out">转出账户</string>
    <string name="depositcard">储蓄卡</string>
    <string name="creditcard">信用卡</string>
    <string name="zhifubao">支付宝</string>
    <string name="account_choose">账户选择</string>

    <string name="title_activity_text_record">TextRecordActivity</string>
    <string name="title_activity_text_pad">TextPadActivity</string>
    <string name="title_activity_in_or_out">InOrOutActivity</string>
    <string name="title_activity_transfer">TransferActivity</string>
    <string name="title_activity_base">BaseActivity</string>
</resources>