<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/line"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/button_pressed"
        android:gravity="center"
        android:text="@string/account_choose"
        android:textColor="@color/white"
        android:textSize="@dimen/typechoose" />

    <Button
        android:id="@+id/button_cash"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="0.1dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/cash"
        android:textColor="@color/black"
        android:textSize="@dimen/typechoose" />

    <Button
        android:id="@+id/button_deposit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="0.1dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/depositcard"
        android:textColor="@color/black"
        android:textSize="@dimen/typechoose" />

    <Button
        android:id="@+id/button_credit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="0.1dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/creditcard"
        android:textColor="@color/black"
        android:textSize="@dimen/typechoose" />

    <Button
        android:id="@+id/button_zhifubao"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="0.1dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/zhifubao"
        android:textColor="@color/black"
        android:textSize="@dimen/typechoose" />

</LinearLayout>